--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,14 @@
 <html lang="en-us">
 
 <head>
+
   <meta charset="UTF-8">
-  
+ 
+
   <title>Tom</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
-   
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
 </head>
