--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
   <title>Tom</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
-   
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
 </head>
